# MeraCapitalParsing

./: .env  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
app/: config.py  crud.py  main.py  models.py  schemas.py  services.py
app/routers/: currencies.py
data/: database.db
migration/: env.py
migration/versions/: 08425be3f7df_init_revision.py  91b13c15977e_add_field_date.py
tests/: test_main.py
