[tool.poetry]
name = "meracapitalparsing"
version = "0.1.0"
description = "A test assignment for a position junior back-end developer"
authors = ["Alexey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.10"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.3"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"